--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,5 @@ div.card {
 .table {
   margin-top: 10px
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
