--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1 class="container-flued bg-dark class-title">
-     {{title}}
+     {{title}}rrrc
   </h1>
-  <!-- ... Starter Files ...
-  <mat-slider class="blue" min="1" max="100" step="1" value="1"></mat-slider>
+  
+  <mat-tab>
 
-  <button (click)="show()">show title</button> -->
-
-  <div>
-
-    <!-- <p *ngFor="let nam of name">
-
-      {{nam.name}}
-
-      <span *ngIf="nam.age >=20">
-        {{nam.age}}
-      </span>
-      
-
-    </p>
- -->
     
-
-  </div>
+  </mat-tab>
 
 
   <pm-product-list></pm-product-list>
