--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,5 +1,27 @@
-@import "~bootstrap/dist/css/bootstrap.css";
 *{
     margin: 0;
     padding: 0;
 }
+
+#filter  {
+    
+    /* float: left; */
+    /* margin-top: 3em; */
+   
+    /* margin-right: 0; */
+    margin: 0em 0;
+}
+
+#inputFilter{
+
+    float: left;
+} 
+.class-title{
+    /* background-color: grey; */
+}
+
+td {
+    
+    padding: 4em;
+}
+
