added sample logo and tabs

--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -5,11 +5,11 @@
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="./assets/images/logo.jpg"
+        <img src="./assets/logo's/Trophy.png"
              class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px" />
       </div>
-
+<!-- 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
         <h3>Alex Nkosi</h3>
@@ -17,8 +17,8 @@
 
       <div class="text-center">@recxtlc</div>
       <div class="text-center">
-        <!-- <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a> -->
-      </div>
+        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+      </div> -->
     </div>
   </div>
 </div>
