--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,8 +10,13 @@ button{
 
 .class-title{
   text-align: left;
-  color: blanchedalmond;
+  color: White;
+  font-size: 2.5em;
+  padding: 5px;
 }
 
+mat-tab-group{
+  margin: 0 20em;
+}
 
 
