--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,25 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1 class="container-flued bg-dark class-title">
-     {{title}}rrrc
+     {{title}}
   </h1>
   
-  <mat-tab>
+  <mat-tab-group >
 
-    
-  </mat-tab>
+    <mat-tab label="Home">
+
+      <app-welcome></app-welcome>
+
+    </mat-tab > 
 
 
-  <pm-product-list></pm-product-list>
+    <mat-tab label="Products">
+       <pm-product-list></pm-product-list>
+    </mat-tab>
+   
+
+  </mat-tab-group>
+
+
+  
 </div>
