--- a/src/app/productDetails/product-details/product-details.component.html
+++ b/src/app/productDetails/product-details/product-details.component.html
@@ -1,20 +1,45 @@
-<mat-card>
+<mat-card  *ngFor = ' let product of products'>
 
     <mat-card-header>
 
         <mat-card-title>
-            title
+
+            {{product.productName}}
         </mat-card-title>
+
+        <mat-card-subtitle>
+            Rating<pm-star [rating] = 'product.starRating'> </pm-star>
+            
+        </mat-card-subtitle>
+        
 
         
     </mat-card-header>
 
-    <img [src]="" alt="">
+    <img [src]='product.imageUrl' [title]='product.productName' [alt]="product.productName"
+        width="250"
+        height="250"
+    >
     <mat-card-content>
 
+        <p>
+
+            {{product.description}}
+
+        </p>
 
     </mat-card-content>
 
+    <mat-dialog-actions>
+        <button mat-button mat-dialog-close>Cancel</button>
+        <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
+        <button mat-button >Add to Cart</button>
+
+    </mat-dialog-actions>
 
 
 </mat-card>
+
+
+
+
