--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -15,12 +15,11 @@
 </div>
 
 
-
+<!-- 
     
 <table class="table">
 
-    <thead>      <!-- <input type="button" class="btn btn-primary" value="Show imaages"> -->
-  
+   
         <th  >
 
             <mat-slide-toggle (click)="toogleImg()"  color= 'warm'> 
@@ -30,11 +29,11 @@
         
 
         </th>
-        <th>Product</th>
-        <th>Available</th>
-        <th>code</th>
-        <th>Price</th>
-        <th>5 Star Rarting</th>
+    <th>Product</th>
+    <th>Available</th>
+    <th>code</th>
+    <th>Price</th>
+    <th>5 Star Rarting</th>
     </thead>
   
         
@@ -52,11 +51,58 @@
       <td>{{prod.productCode | lowercase |convertToSpace:'-' }}</td>
       
       <td>{{prod.price |currency:'ZAR': 'symbol-narrow':'1.2-2'}}</td>
-      <!-- <td>{{prod.starRating}}</td> -->
+      
       <td><pm-star [rating] = 'prod.starRating'></pm-star></td>
 
     </tr>
     
 
-</table>
+</table> -->
+
+<!-- ['Product','Available','Price','code','5 Star Rarting'] -->
+<table mat-table [dataSource]="filteredProducts" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container class="colums" matColumnDef="Product">
+      <th mat-header-cell *matHeaderCellDef> Product </th>
+      <td mat-cell *matCellDef="let element"> 
+        <img *ngIf='showImages'[src]='element.imageUrl'  (click)='openProductDetails(element.productID)' [title]='element.productName | uppercase'
+        width="150"
+        height="150"
+      
+        >
+      </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container  class="colums" matColumnDef="Available">
+      <th mat-header-cell *matHeaderCellDef> Available </th>
+      <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container  class="colums" matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef> code </th>
+      <td mat-cell *matCellDef="let element"> {{element.productCode}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container  class="colums" matColumnDef="Price">
+      <th mat-header-cell *matHeaderCellDef> Price  </th>| currency:'ZAR' 'symbol-narrow':'1-2.2'}} 
+      <td mat-cell *matCellDef="let element"> {{element.price |currency:'ZAR': 'symbol-narrow':'1.2-2'}} </td>
+    </ng-container>
+    <ng-container  class="colums" matColumnDef="Rating">
+        <th mat-header-cell *matHeaderCellDef> 5 Star Rating </th>
+        <td mat-cell *matCellDef="let element"> <pm-star [rating]='element.starRating'></pm-star> </td>
+      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+ 
+  </table>
+
+
+
 </mat-card>
