--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,3 +25,37 @@ mat-tab{
 box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
 }
 
+
+.logo-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size:5.5em;
+  width: 100%;
+}
+
+.navbar{
+  justify-content: space-between;
+  font-size: 1.5rem;
+  background-image: linear-gradient(to right, #7b9d93, #8baaa1, #9bb8af, #abc5bd, #bcd3cc);
+}
+
+.space-link{
+   padding-right: 1rem;
+}
+
+a{
+   color:#17202A;
+
+  
+}
+.class-links{
+  font-size: 0.8em;
+  
+}
+a:hover{
+  color: white;
+}
