--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <a href="#" class="space-link class-links">About</a>
         <a href="#" class="space-link class-links">Contact</a>
         <a href="#" class="space-link class-links"><i class="fa fa-heart" aria-hidden="true"></i></a>
-        <a href="#" class="space-link class-links"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        <a href="#" class="space-link class-links"><i matBadge="1" matBadgeSize="small"  class="fa fa-shopping-cart" aria-hidden="true"></i>
         </a>
     
     </div>
