--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,26 +1,26 @@
 ﻿
 
 
-<div class=" coursel-pos">
+<div class="card coursel-pos">
  
   <div class="card-body">
     
 
-    <ngb-carousel #carousel [interval]="2000" [pauseOnHover]="pauseOnHover"  (slide)="onSlide($event)">
+    <ngb-carousel #carousel [interval]="2000" [pauseOnHover]="pauseOnHover"   (slide)="onSlide($event)">
       <ng-template ngbSlide *ngFor="let product of products; index as i">
         <div class="carousel-caption">
           <h3 class="imgTitle">{{product.productName}}</h3>
         </div>
         <a href="" target="_blank" rel="nofollow noopener noreferrer">
           <div class="picsum-img-wrapper">
-            <img width="400" height="250" [src]="product.imageUrl" alt="product.productName">
+            <img class="class-product-img" width="400" height="250" [src]="product.imageUrl" alt="product.productName">
           </div>
         </a>
       </ng-template>
     </ngb-carousel>
   </div>
-  <div class="buttons">
-    <button mat-icon-button  color="primary">Shop</button>
+  <div>
+    <button class="class-btn-shop" mat-raised-button color="primary" (click)="activateShopRouterLink()"> <i class="fa fa-shopping-bag" aria-hidden="true">SHOP</i></button>
    
   </div>
 </div>
