--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,7 @@ div.card {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-tab-labels {
+  display: flex;
+  background-color: white;
+}
