--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -41,6 +41,9 @@ box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
   justify-content: space-between;
   font-size: 1.5rem;
   background-image: linear-gradient(to right, #7b9d93, #8baaa1, #9bb8af, #abc5bd, #bcd3cc);
+  -webkit-box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
+  -moz-box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
+  box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
 }
 
 .space-link{
@@ -49,13 +52,59 @@ box-shadow: -32px 12px 112px -41px rgba(0,0,0,0.5);
 
 a{
    color:#17202A;
-
+   text-decoration: none;
+  padding: .5em;
+  border-radius: 45px;
   
 }
 .class-links{
   font-size: 0.8em;
   
 }
-a:hover{
+.navbar a.active {
+  background-color: #4CAF50;
   color: white;
+}
+a:hover{
+  background-color: #4CAF50;
+
+  
+}
+.cart-link-icon{
+  background-color: teal;
+  color: white;
+  border-radius: 45px;
+  padding-left:5px ;
+  padding-right: 2em;
+  width: 500px; 
+  margin-left: .5em;
+  
+}
+.cart-link-icon:hover{
+
+  background-color: yellow;
+  color: red;
+}
+
+.heart-link-icon{
+  text-align: center;
+  color: white;
+  background-color: teal;
+  border-radius: 50px;
+}
+.heart-link-icon:hover{
+  text-align: center;
+  color: white;
+  background-color: #FF0033;
+  border-radius: 50px;
+}
+@media screen and (max-width:800px){
+  .logo-text {
+    font-size:4.0em ;
+  }
+}
+@media screen and (max-width: 450px){
+  .logo-text {
+    font-size:2.9em ;
+  }
 }
