--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
     
     <div>
 
-        <a href="#" class="space-link class-links" [routerLink]="['/welcome']">Log in</a>
+        <a href="#" class="space-link class-links glyphicon glyphicon-log-in" [routerLink]="['/welcome']">Log in</a>
         <a href="#" class="space-link class-links" [routerLink]="['/productlist']" >Shop</a>
         <a href="#" class="space-link class-links">About</a>
         <a href="#" class="space-link class-links">Contact</a>
-        <a href="#" class="space-link class-links"><i class="fa fa-heart" aria-hidden="true"></i></a>
-        <a href="#" class="space-link class-links"><i matBadge="1" matBadgeSize="small"  class="fa fa-shopping-cart" aria-hidden="true"></i>
+        <a href="#" class="space-link class-links heart-link-icon"><i class="fa fa-heart" aria-hidden="true"></i></a>
+        <a href="#" class="space-link class-links cart-link-icon" ><i matBadge="1" matBadgeSize="small"  class="fa fa-shopping-cart" aria-hidden="true"></i>
         </a>
     
     </div>
@@ -20,7 +20,7 @@
 </mat-toolbar>
 
 
-  <h1 class="logo-text">Gamers Land  </h1>
+  <h1 class="logo-text">{{title}} </h1>
 
   
 <router-outlet></router-outlet>
