--- a/src/app/home/welcome.component.css
+++ b/src/app/home/welcome.component.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 
+    box-sizing: border-box;
 
 
 }
@@ -21,20 +22,91 @@
   font-size: 20px;
   margin-bottom: 1.0em;
 }
-.class-product-img{
 
-padding: 2em;
-
-
-}
 .class-btn-shop{
   width: 50%;
   font-size: 1.5em;
+  margin-bottom: 1em;
+ 
+ 
+  background-image: linear-gradient(to left, #66f0c7, #6adebc, #6dcdb1, #70bba6, #71aa9a);
+  background-image: linear-gradient(to left bottom, #66f0c7, #63e8c7, #62e1c7, #62d9c5, #63d1c3);
+
+}
+.class-btn-shop:hover{
+  
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+background-color: teal;
+color: white;
+}
+.class-btn-shop  span  {
+ 
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.3em;
+  color:#FDFEFE;
+  line-height: 1em;
+  font-weight: 800;
+  content: "";
+}
+.fa-shopping-bag {
+  font-size: 1.2em;
+  position: relative;
+  top: -3px;
+  bottom: 0;
 }
 
-.card {
-  width: 60%;
-  height: 60%;
-  /* background-image: linear-gradient(to left bottom, #e5e7e6, #dbe2df, #d1ddd8, #c7d8d2, #bcd3cc); */
-  background-image: radial-gradient(circle, #a3e1c2, #8bdfb7, #70dcac, #4ed9a1, #07d697);
+.class-product-img{
+
+  padding: 2em;
+    
+  width:500px;
+  height:450px;
+
 }
+.card {
+  width: 600px;
+  height: 500px;
+  background-image: linear-gradient(to left bottom, #e5e7e6, #dbe2df, #d1ddd8, #c7d8d2, #bcd3cc);
+  /* background-image: radial-gradient(circle, #a3e1c2, #8bdfb7, #70dcac, #4ed9a1, #07d697); */
+
+}
+
+@media screen and (max-width: 800px){
+  .class-btn-shop{
+    width: 30%;
+    text-align: center;
+    
+  }
+  .class-btn-shop  span {
+   display: none;
+  }
+  .imgTitle{
+    font-size: 2.em;
+  }
+}
+
+@media screen and (max-width: 550px){
+  .class-btn-shop{
+    width: 30%;
+    text-align: center;
+    
+  }
+  .class-product-img{
+
+    padding: 2em;
+      
+    width:330px;
+    height:350px;
+  
+  }
+  .imgTitle{
+    font-size: 1.4em;
+  }
+  .card{
+    width: 300px;
+    height: 400px;
+  }
+}
+
+
