--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -13,14 +13,14 @@
         </div>
         <a href="" target="_blank" rel="nofollow noopener noreferrer">
           <div class="picsum-img-wrapper">
-            <img class="class-product-img" width="400" height="250" [src]="product.imageUrl" alt="product.productName">
+            <img class="class-product-img" [src]="product.imageUrl" alt="product.productName">
           </div>
         </a>
       </ng-template>
     </ngb-carousel>
   </div>
   <div>
-    <button class="class-btn-shop" mat-raised-button color="primary" (click)="activateShopRouterLink()"> <i class="fa fa-shopping-bag" aria-hidden="true">SHOP</i></button>
+    <button class="class-btn-shop" mat-raised-button color="primary" (click)="activateShopRouterLink()"> <i class="fa fa-shopping-bag" aria-hidden="true"></i><span>SHOP NOW</span></button>
    
   </div>
 </div>
