about and contact page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 
         <a href="#" class="space-link class-links glyphicon glyphicon-log-in" [routerLink]="['/login']">Log in</a>
         <a href="#" class="space-link class-links" [routerLink]="['/productlist']" >Shop</a>
-        <a href="#" class="space-link class-links">About</a>
-        <a href="#" class="space-link class-links">Contact</a>
+        <a href="#" class="space-link class-links" [routerLink] ="['/about']" >About</a>
+        <a href="#" class="space-link class-links"  [routerLink] ="['/contactus']" >Contact</a>
         <a href="#" class="space-link class-links heart-link-icon"><i class="fa fa-heart" aria-hidden="true"></i></a>
         <a href="#" class="space-link class-links cart-link-icon" ><i matBadge="1" matBadgeSize="small"  class="fa fa-shopping-cart" aria-hidden="true"></i>
         </a>
