--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -73,7 +73,7 @@ a:hover{
 .cart-link-icon{
   background-color: teal;
   color: white;
-  border-radius: 45px;
+  border-radius: 35px;
   padding-left:5px ;
   padding-right: 2em;
   width: 500px; 
@@ -82,8 +82,8 @@ a:hover{
 }
 .cart-link-icon:hover{
 
-  background-color: yellow;
-  color: red;
+  background-color:white;
+  color:  teal;
 }
 
 .heart-link-icon{
