--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,15 +8,36 @@ input.example-right-align::-webkit-inner-spin-button {
 .class-card-form{
 
     margin: auto auto;
-    min-width: 150px ;
-    max-width: 450px;
+    min-width: 350px ;
+    max-width: 500px;
 
     margin-top: auto 0;
     
     width: 100%;
+   
 }
  .class-form-input {
      display: block;
-     width: 50%;
+     width: 55%;
      margin: 0 auto;
+}
+
+mat-label {
+    font-size: 1.5em;
+}
+
+.card{
+    -webkit-box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+
+margin:auto auto;
+
+}
+.card-position {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 10em;
+    font-family: Robo;
 }
