fixed dialog layout and contact us page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,18 @@
 <div class="class-about-background-image">
 
+    <img src="../../assets/backround-pictures/Tyu.jpg"
+         class="class-about-background-image"
+         alt="">
 
+    <mat-card class="class-card-position">
+
+        <mat-card-title class="vision-title">Our Vision</mat-card-title>
+
+        <mat-card-content>
+            <p class="vision"><em> We aim to provide best equitment for gamers </em></p>
+
+
+        </mat-card-content>
+
+    </mat-card>
 </div>
