--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,15 +1,48 @@
 .class-about-background-image{
-    width: 1000px;
-    background: url("../../assets/backround-pictures/Tyu.jpg");
-}
-
-
-.imgBackground {
-    background-image: url('../../assets/backround-pictures/Tyu.jpg') !important;
     background-color: #cccccc;
-    height: 500px;
-    background-position: bottom;
+    height:890px;
+    width:1800x;
+    min-width: 100%;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+}
+
+@media screen and (max-width:800px)
+{
+    .class-about-background-image{
+ 
+    height:50%;
+    width:100%;
+ }
+
+}
+
+
+.class-card-position{
+    position: absolute;
+    top: 10em;
+   
+
+    margin: auto auto;
+    opacity: .3;
+    padding: 5em;
+    -webkit-box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 34px 0px rgba(0,0,0,0.75);
+}
+.vision-title{
+     font-size: 2em;
+}
+.vision{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.6em;
+    font-style: italic;
+    opacity: 1;
+}
+
+.class-card-position:hover{
+    opacity: .5;
+    
 }
