--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,44 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <mat-toolbar color='primary' class="navbar"> 
+  <mat-toolbar color='primary'
+               class="navbar">
 
-    <a href="" [routerLink]="['/welcome']" >Home</a>
+    <a href=""
+       [routerLink]="['/welcome']">Home</a>
 
-    
+
     <div>
 
-        <a href="#" class="space-link class-links glyphicon glyphicon-log-in" [routerLink]="['/login']">Log in</a>
-        <a href="#" class="space-link class-links" [routerLink]="['/productlist']" >Shop</a>
-        <a href="#" class="space-link class-links" [routerLink] ="['/about']" >About</a>
-        <a href="#" class="space-link class-links"  [routerLink] ="['/contactus']" >Contact</a>
-        <a href="#" class="space-link class-links heart-link-icon"><i class="fa fa-heart" aria-hidden="true"></i></a>
-        <a href="#" class="space-link class-links cart-link-icon" ><i matBadge="1" matBadgeSize="small"  class="fa fa-shopping-cart" aria-hidden="true"></i>
-        </a>
-    
+      <a href="#"
+         class="space-link class-links glyphicon glyphicon-log-in"
+         [routerLink]="['/login']">Log in</a>
+      <a href="#"
+         class="space-link class-links"
+         [routerLink]="['/productlist']">Shop</a>
+      <a href="#"
+         class="space-link class-links"
+         [routerLink]="['/about']">About</a>
+      <a href="#"
+         class="space-link class-links"
+         [routerLink]="['/contactus']">Contact</a>
+      <a href="#"
+         class="space-link class-links heart-link-icon"><i class="fa fa-heart"
+           aria-hidden="true"></i></a>
+      <a href="#"
+         class="space-link class-links cart-link-icon"><i matBadge="1"
+           matBadgeSize="small"
+           class="fa fa-shopping-cart"
+           aria-hidden="true"></i>
+      </a>
+
     </div>
 
-</mat-toolbar>
-
+  </mat-toolbar>
 
   <h1 class="logo-text">{{title}} </h1>
 
-  
-<router-outlet></router-outlet>
-  
+
+
+  <router-outlet></router-outlet>
+
 </div>
