--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -62,6 +62,8 @@ table {
 
     width: 50%;
 }
-.price{
-    font-size: 1.5em;
+
+.product-rating{
+    color: #FFA726;
+    transition: ease-in;
 }
