--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -12,9 +12,6 @@
 
   </mat-card>
 
-
-
-
   <mat-tab-group mat-align-tabs="center"
                  [(selectedIndex)]=linkIndex>
 
@@ -80,7 +77,7 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -165,7 +162,7 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -249,7 +246,7 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -333,7 +330,7 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
