added Gaming land icon

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,9 +9,9 @@
         <mat-card-title class="vision-title">Our Vision</mat-card-title>
 
         <mat-card-content>
-            <p class="vision"><em> We aim to provide best equitment for gamers </em></p>
-
-
+            <p class="vision"><em> We aim to provide best equipment for gamers </em></p>
+             <img width="150" src="../../assets/logo's/Trophy-removebg-preview.png" alt="">
+           
         </mat-card-content>
 
     </mat-card>
