--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -28,11 +28,11 @@
 
 
 
-          <!-- Product Column -->
+          <!-- Product Product -->
           <ng-container class="colums"
                         matColumnDef="Product">
             <th mat-header-cell
-                *matHeaderCellDef> Product </th>
+                *matHeaderCellDef> <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle> Product </th>
             <td mat-cell
                 *matCellDef="let element">
               <img *ngIf='showImages'
@@ -73,11 +73,12 @@
           <!-- Rating Column -->
           <ng-container class="colums"
                         matColumnDef="Rating">
-            <th mat-header-cell
-                *matHeaderCellDef> 5 Star Rating </th>
+            <th mat-header-cell style="text-align: left;"
+                *matHeaderCellDef> Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating"
+                       [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -162,7 +163,8 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating"
+                       [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -246,7 +248,8 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating"
+                       [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
@@ -330,7 +333,8 @@
                 *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
-              <pm-star class="product-rating" [rating]='element.starRating'></pm-star>
+              <pm-star class="product-rating"
+                       [rating]='element.starRating'></pm-star>
             </td>
           </ng-container>
           <tr mat-header-row
