--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,9 @@
-<p>page-not-found works!</p>
+
+
+<mat-card class=" card">
+    <h1 >
+
+        Page Not Found  <em> 404</em>
+    
+    </h1>
+</mat-card>
